--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">JumbleHelper</string>
-    <string name="enter_word">Enter your word here</string>
 
-    <string name="enter_char">Only Unjumble Character</string>
-    <string name="your_word">Your Word Is..</string>
+
+    <string name="enter_char">Enter your word here</string>
+
     <string name="speech_word">Speech</string>
     <string name="action_settings">Settings</string>
 </resources>
