--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">JumbleHelper</string>
 
 
-    <string name="enter_char">Enter your word here</string>
+    <string name="enter_char">Enter your word here!!</string>
 
     <string name="speech_word">Speech</string>
     <string name="action_settings">Settings</string>
